Add more translation

--- a/src/i18n/messages/vi.json
+++ b/src/i18n/messages/vi.json
@@ -12,14 +12,14 @@
   "account.settings.section.account.information.description": "Những thiết lập này bao gồm thông tin cơ bản về tài khoản của bạn.",
   "account.settings.section.profile.information": "Thông tin tài khoản",
   "account.settings.section.demographics.information": "Thông tin bắt buộc",
-  "account.settings.section.site.preferences": "Tuỳ chỉnh Trang web",
-  "account.settings.section.linked.accounts": "Những tài khoản đã Liên kết",
-  "account.settings.section.linked.accounts.description": "You can link your identity accounts to simplify signing in to {siteName}.",
+  "account.settings.section.site.preferences": "Tuỳ chỉnh trang web",
+  "account.settings.section.linked.accounts": "Các tài khoản đã liên kết",
+  "account.settings.section.linked.accounts.description": "Bạn có thể liên kết một số tài khoản khác để đăng nhập dễ dàng vào {siteName}.",
   "account.settings.field.username": "Tên đăng nhập",
-  "account.settings.field.username.help.text": "The name that identifies you on {siteName}. You cannot change your username.",
+  "account.settings.field.username.help.text": "Tên định dạnh của bạn trên {siteName}. Bạn không thể thay đổi username này.",
   "account.settings.field.full.name": "Họ và tên",
   "account.settings.field.full.name.empty": "Thêm tên",
-  "account.settings.field.full.name.help.text": "Tên được sử dụng để xác minh ID và xuất hiện trên chứng chỉ của bạn.",
+  "account.settings.field.full.name.help.text": "Tên đầy đủ được sử dụng để xác minh và xuất hiện trên chứng chỉ của bạn.",
   "account.settings.field.full.name.help.text.default": "The name that appears on your public profile.",
   "account.settings.field.full.name.help.text.default.certificate": "This name is selected to appear on your certificates and public-facing records.",
   "account.settings.field.name.verified": "Verified name",
@@ -46,10 +46,10 @@
   "account.settings.field.name.verified.submitted.message.header": "Your name change request is almost complete!",
   "account.settings.field.email": "Email (Đăng nhập)",
   "account.settings.field.email.empty": "Thêm Email",
-  "account.settings.field.email.confirmation": "Chúng tôi đã gửi một thông báo xác nhận đến {value}. Nhấp vào liên kết trong thông báo đó để cập nhật địa chỉ email của bạn.",
-  "account.settings.field.email.help.text": "You receive messages from {siteName} and course teams at this address.",
+  "account.settings.field.email.confirmation": "Hệ thống đã gửi một thông báo xác nhận đến {value}. Nhấp vào liên kết trong thông báo đó để cập nhật địa chỉ email của bạn.",
+  "account.settings.field.email.help.text": "Bạn sẽ nhận các email thông báo từ {siteName} đến địa chỉ này.",
   "account.settings.field.secondary.email": "email Khôi phục tài khoản",
-  "account.settings.field.secondary.email.empty": "Thêm một email Khôi phục tài khoản",
+  "account.settings.field.secondary.email.empty": "Thêm email khôi phục tài khoản",
   "account.settings.field.secondary.email.confirmation": "Chúng tôi đã gửi một thông báo xác nhận đến {value}. Nhấp vào liên kết trong thông báo đó để cập nhật địa chỉ email của bạn.",
   "account.settings.email.field.confirmation.header": "Chờ xác nhận",
   "account.settings.field.dob": "Năm sinh",
@@ -62,10 +62,10 @@
   "account.settings.field.state.empty": "Thêm bang",
   "account.settings.field.state.options.empty": "Chọn bang",
   "account.settings.field.site.language": "Ngôn ngữ trang",
-  "account.settings.field.site.language.help.text": "Hiện nay Kiến Học chỉ hỗ trợ tiếng Việt.",
-  "account.settings.field.education": "Giáo dục",
-  "account.settings.field.education.empty": "Trình độ học vấn",
-  "account.settings.field.education.levels.empty": "Tìm trình độ học vấn",
+  "account.settings.field.site.language.help.text": "Ngôn ngữ dùng cho toàn bộ hệ thống. Hiện nay mới chỉ một số ngôn ngữ được hỗ trợ.",
+  "account.settings.field.education": "Học vấn cao nhất",
+  "account.settings.field.education.empty": "Cập nhật trình độ học vấn",
+  "account.settings.field.education.levels.empty": "Chọn trình độ học vấn",
   "account.settings.field.education.levels.p": "Tiến sĩ",
   "account.settings.field.education.levels.m": "Thạc sĩ ",
   "account.settings.field.education.levels.b": "Bằng Cử nhân",
@@ -81,7 +81,7 @@
   "account.settings.field.gender.options.f": "Nữ",
   "account.settings.field.gender.options.m": "Nam",
   "account.settings.field.gender.options.o": "Khác",
-  "account.settings.field.language.proficiencies": "Spoken language",
+  "account.settings.field.language.proficiencies": "Ngôn ngữ sử dụng",
   "account.settings.field.language.proficiencies.empty": "Thêm một ngôn ngữ sử dụng",
   "account.settings.field.language_proficiencies.options.empty": "Chọn một ngôn ngữ",
   "account.settings.field.time.zone": "Múi giờ",
@@ -131,15 +131,15 @@
   "account.settings.delete.account.before.proceeding": "Trước khi tiếp tục, vui lòng {actionLink}.",
   "account.settings.delete.account.header": "Xóa tài khoản",
   "account.settings.delete.account.subheader": "Chúng tôi rất tiếc khi thấy bạn ra đi!",
-  "account.settings.delete.account.text.1": "Please note: Deletion of your account and personal data is permanent and cannot be undone. {siteName} will not be able to recover your account or the data that is deleted.",
-  "account.settings.delete.account.text.2": "Once your account is deleted, you cannot use it to take courses on {siteName}.",
+  "account.settings.delete.account.text.1": "Lưu ý: Tài khoản và các dữ liệu tài khoản sau khi bị xóa sẽ không thể hồi phục được. {siteName} sẽ không thể phục hồi lại các dữ liệu này của bạn.",
+  "account.settings.delete.account.text.2": "Sau khi tài khoản bị xóa, bạn sẽ không thể dùng để tiếp tục học trên {siteName}.",
   "account.settings.delete.account.text.2.edX": "Khi tài khoản của bạn bị xóa, bạn không thể sử dụng nó để tham gia các khóa học trên ứng dụng edX, edx.org hoặc bất kỳ trang web nào khác được lưu trữ bởi edX. Điều này bao gồm quyền truy cập vào edx.org từ hệ thống hệ thống trường thành viên hoặc truy cập riêng tư bởi MIT Open Learning, Wharton Executive Education và Harvard Medical School cung cấp.",
   "account.settings.delete.account.text.3.link": "Follow these instructions for printing or downloading a certificate",
-  "account.settings.delete.account.text.warning": "Warning: Account deletion is permanent. Please read the above carefully before proceeding. This is an irreversible action, and you will no longer be able to use the same email on {siteName}.",
-  "account.settings.delete.account.text.change.instead": "Thay vào đó, bạn muốn thay đổi email, tên hoặc mật khẩu của bạn?",
+  "account.settings.delete.account.text.warning": "Cảnh báo: Xóa tài khoản là vĩnh viện và không thể phục hồi. Hãy đảm bảo chắc chắn bạn muốn thực hiện hành động này trước khi tiếp tục. Và bạn cũng sẽ không thể sử dụng email này để đăng ký tài khoản mới trên {siteName}.",
+  "account.settings.delete.account.text.change.instead": "Thay vào đó, có thể bạn chỉ muốn thay đổi email, tên hoặc mật khẩu của bạn?",
   "account.settings.delete.account.button": "Xóa tài khoản",
   "account.settings.delete.account.please.activate": "kích hoạt tài khoản của bạn",
-  "account.settings.delete.account.please.confirm": "confirm your account",
+  "account.settings.delete.account.please.confirm": "xác nhận tài khoản của bạn",
   "account.settings.delete.account.please.unlink": "gỡ liên kết tài khoản mạng xã hội",
   "account.settings.delete.account.modal.header": "Bạn có chắc không?",
   "account.settings.delete.account.modal.text.1": "You have selected \"Delete My Account\". Deletion of your account and personal data is permanent and cannot be undone. {siteName} will not be able to recover your account or the data that is deleted.",
