Add more translation

--- a/src/i18n/messages/vi.json
+++ b/src/i18n/messages/vi.json
@@ -91,7 +91,7 @@
   "account.settings.field.time.zone.all": "Tất cả múi giờ",
   "account.settings.field.time.zone.country": "Múi giờ quốc gia",
   "account.settings.section.social.media": "Liên kết Mạng xã hội",
-  "account.settings.section.social.media.description": "Optionally, link your personal accounts to the social media icons on your {siteName} profile.",
+  "account.settings.section.social.media.description": "Mục tùy chọn, liên kết các tài khoản mạng xã hội với các biểu tượng mạng xã hội hiển thị trên tài khoản {siteName} của bạn.",
   "account.settings.field.social.platform.name.linkedin": "LinkedIn",
   "account.settings.field.social.platform.name.linkedin.empty": "Thêm hồ sơ LinkedIn",
   "account.settings.jump.nav.delete.account": "Xóa tài khoản",
@@ -156,7 +156,7 @@
   "account.settings.delete.account.modal.after.text": "Xóa tài khoản, bao gồm xóa khỏi danh sách email, có thể mất vài tuần để xử lý hoàn toàn trong hệ thống của chúng tôi. Nếu bạn không muốn nhận thêm email trước đó, vui lòng hủy đăng ký ở cuối bất kỳ email nào.",
   "account.settings.delete.account.modal.after.button": "Đóng",
   "account.settings.delete.account.text.3.edX": "You may also lose access to verified certificates and other program credentials like MicroMasters certificates. You can make a copy of these for your records before proceeding with deletion. {actionLink}.",
-  "account.settings.delete.account.text.3": "You may also lose access to verified certificates and other program credentials. You can make a copy of these for your records before proceeding with deletion.",
+  "account.settings.delete.account.text.3": "Bạn sẽ không thể xem lại các chứng chỉ bạn đã đạt được. Bạn nên sao lưu các thông tin này trước khi tiến hành xóa tài khoản.",
   "account.settings.message.demographics.service.issue": "Có lỗi xảy ra khi lấy hoặc lưu thông tin tài khoản của bạn. Hãy thử lại sau.",
   "account.settings.field.demographics.gender": "Giới tính",
   "account.settings.field.demographics.gender.empty": "Thêm giới tính",
